--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ six==1.16.0
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
 tensorflow==2.14.1
+tensorflow-hub==0.16.1
 tensorflow-estimator==2.14.0
 tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
